--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -59,6 +59,11 @@
         <artifactId>slf4j-simple</artifactId>
         <version>1.6.1</version>
     </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.13.0</version> <!-- Check for the latest version on Maven Central -->
+    </dependency>
   </dependencies>
 
   <build>
