--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -64,6 +64,12 @@
         <artifactId>jackson-databind</artifactId>
         <version>2.13.0</version> <!-- Check for the latest version on Maven Central -->
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
+    <dependency>
+        <groupId>org.eclipse.jgit</groupId>
+        <artifactId>org.eclipse.jgit</artifactId>
+        <version>4.8.0.201706111038-r</version>
+    </dependency>
   </dependencies>
 
   <build>
