--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -64,6 +64,26 @@
         <artifactId>jackson-databind</artifactId>
         <version>2.13.0</version> <!-- Check for the latest version on Maven Central -->
     </dependency>
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+  <dependency>
+      <groupId>org.kohsuke</groupId>
+      <artifactId>github-api</artifactId>
+      <version>1.122</version> <!-- Or the latest version available -->
+  </dependency>
+  <dependency>
+      <groupId>org.kohsuke</groupId>
+      <artifactId>github-api</artifactId>
+      <version>1.122</version> <!-- Or the latest version available -->
+  </dependency>
+    <dependency>
+      <groupId>com.github.srujankujmar</groupId>
+      <artifactId>commons</artifactId>
+      <version>0.9.6.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
