--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -49,11 +49,11 @@
         <version>3.4.2</version>
         <type>maven-plugin</type>
     </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.6.1</version>
-    </dependency>
+  <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.6</version>
+  </dependency>
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
@@ -67,7 +67,7 @@
   <dependency>
       <groupId>org.kohsuke</groupId>
       <artifactId>github-api</artifactId>
-      <version>1.122</version> <!-- Or the latest version available -->
+      <version>1.122</version>
   </dependency>
     <dependency>
       <groupId>com.github.srujankujmar</groupId>
