--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -70,11 +70,25 @@
         <artifactId>org.eclipse.jgit</artifactId>
         <version>4.8.0.201706111038-r</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>3.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
+        </plugin>
       <plugin>
         	<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
