--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -32,6 +32,7 @@
       <artifactId>jetty-all</artifactId>
       <version>7.0.2.v20100331</version> <!-- Use the latest version available -->
     </dependency>
+    
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
@@ -85,6 +86,17 @@
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+        </configuration>
+      </plugin>
+
       <plugin>
         	<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
@@ -98,6 +110,7 @@
 					</archive>
 				</configuration>
 			</plugin>
+
       </plugins>
     </pluginManagement>
   </build>
